--- a/app/src/main/res/layout/activity_me_feedback.xml
+++ b/app/src/main/res/layout/activity_me_feedback.xml
@@ -39,30 +39,17 @@
         android:layout_marginTop="18dp"
         layout="@layout/view_divider" />
 
-    <ScrollView
+    <EditText
+        android:id="@+id/feedbackEditText"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:padding="16dp"
         android:background="@color/major_light"
-        android:padding="16dp" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <EditText
-                android:id="@+id/feedbackEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:gravity="top"
-                android:hint="@string/input_feedback"
-                android:inputType="textMultiLine"
-                android:minLines="8"
-                android:textColor="@color/font_major_dark"
-                android:textSize="16sp" />
-        </LinearLayout>
-    </ScrollView>
+        android:gravity="top"
+        android:hint="@string/input_feedback"
+        android:inputType="textMultiLine"
+        android:textColor="@color/font_major_dark"
+        android:textSize="16sp" />
 
     <include
         android:layout_width="match_parent"
@@ -75,22 +62,16 @@
         android:layout_marginTop="18dp"
         layout="@layout/view_divider" />
 
-    <RelativeLayout
+    <classes.widget.ClearEditText
+        android:id="@+id/contactEditText"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/major_light" >
-
-        <classes.widget.ClearEditText
-            android:id="@+id/contactEditText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@null"
-            android:hint="@string/input_contact_info"
-            android:textColor="@color/font_major_dark"
-            android:textSize="16sp" />
-    </RelativeLayout>
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:background="@color/major_light"
+        android:hint="@string/input_contact_info"
+        android:textColor="@color/font_major_dark"
+        android:textSize="16sp"/>
 
     <include
         android:layout_width="match_parent"
