--- a/app/src/main/res/layout/activity_guide_pick_company.xml
+++ b/app/src/main/res/layout/activity_guide_pick_company.xml
@@ -25,20 +25,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/choose_vendor"
+            android:text="@string/choose_company"
             android:textColor="@color/major_light"
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/addTextView"
+            android:id="@+id/completeTextView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:gravity="center"
-            android:text="@string/add"
-            android:textColor="@color/title_text_color"
+            android:text="@string/complete"
+            android:textColor="@color/font_title_selected"
             android:textSize="16sp" />
 
     </RelativeLayout>
@@ -60,12 +60,12 @@
             android:src="@drawable/search" />
 
         <classes.widget.ClearEditText
-            android:id="@+id/vendorEditText"
+            android:id="@+id/companyEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingRight="16dp"
             android:background="@null"
-            android:hint="@string/input_vendor"
+            android:hint="@string/input_company_name"
             android:textColor="@color/font_major_dark"
             android:textSize="16sp"/>
 
@@ -79,7 +79,18 @@
     <RelativeLayout
         android:layout_width="match_parent"
 	    android:layout_height="24dp"
-		android:background="@color/list_item_header" />
+		android:background="@color/list_item_header">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:text="@string/search_result"
+            android:textColor="@color/font_list_item_header"
+            android:textSize="14sp"/>
+
+    </RelativeLayout>
             
 	<include
 		android:layout_width="match_parent"
@@ -87,9 +98,9 @@
 	  	layout="@layout/view_divider"/>
 
 	<ListView
-	    android:id="@+id/vendorListView"
+	    android:id="@+id/companyListView"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
-	    android:listSelector="@drawable/list_item_drawable"/>
+        android:listSelector="@drawable/list_item_drawable"/>
 
 </LinearLayout>
