--- a/app/src/main/res/layout/activity_guide_joined.xml
+++ b/app/src/main/res/layout/activity_guide_joined.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="100dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/sent"/>
+        android:src="@drawable/joined"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -41,7 +41,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
-        android:text="@string/prompt_join"
+        android:text="@string/prompt_joined"
         android:textColor="@color/major_light"
         android:textSize="14sp"/>
 
