--- a/app/src/main/res/layout/activity_guide_pick_company.xml
+++ b/app/src/main/res/layout/activity_guide_pick_company.xml
@@ -76,21 +76,15 @@
 		android:layout_height="0.5dp"
 	  	layout="@layout/view_divider"/>
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/sectionTextView"
         android:layout_width="match_parent"
-	    android:layout_height="24dp"
-		android:background="@color/list_item_header">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
-            android:text="@string/search_result"
-            android:textColor="@color/font_list_item_header"
-            android:textSize="14sp"/>
-
-    </RelativeLayout>
+        android:layout_height="24dp"
+        android:paddingLeft="16dp"
+        android:background="@color/list_item_header"
+        android:text="@string/search_result"
+        android:textColor="@color/font_list_item_header"
+        android:textSize="14sp"/>
             
 	<include
 		android:layout_width="match_parent"
